--- a/3_ZEROS_DE_FUNCOES/3.4_metodo_das_aproximacoes_sucessivas.ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.4_metodo_das_aproximacoes_sucessivas.ipynb
@@ -6,15 +6,15 @@
    "source": [
     "## 3.4 Método das Aproximações Sucessivas\n",
     "\n",
-    "Muitos problemas em ciências e engenharia envolvem a resolução de uma equação que pode ser colocada na forma $f(x)=0$. Em alguns casos a soluçãoo exata $\\overline{x}$ pode ser encontrada por processos analíticos, quando isso não for possível, uma solução aproximada pode ser obtida por métodos numéricos. \n",
+    "Muitos problemas em ciências e engenharia envolvem a resolução de uma equação que pode ser colocada na forma $f(x)=0$. Em alguns casos a solução exata $\\overline{x}$ pode ser encontrada por processos analíticos, quando isso não for possível, uma solução aproximada pode ser obtida por métodos numéricos. \n",
     "\n",
-    "Em geral, a solução numérica é obtida por meio de um processo iterativo que gera uma sequência de soluções aproximadas a partir de uma aproximação inicial $x_0$. Se os valores obtidos se aproximam cada vez mais da solução exata $\\overline{x}$, dizemos que a sequência está convergindo\n",
+    "Em geral, a solução numérica é obtida por meio de um processo iterativo que gera uma sequência de soluções aproximadas $x_i$, $i=1,2,3,...$ a partir de uma aproximação inicial $x_0$. Se os valores obtidos se aproximam cada vez mais da solução exata $\\overline{x}$, ou seja, $|\\overline{x} -x_i| \\rightarrow 0$ quando $i\\rightarrow \\infty$, dizemos que a sequência está convergindo para a solução exata.\n",
     "\n",
-    "O Método das aproximações sucessivas, ou ponto fixo, consiste em reescrever a equação $f(x)=0 $ em uma equação equivalente $x = \\phi (x)$ em que $\\phi (x)$ é a chamada função de iteração. A raiz $\\overline{x}$ procurada é obtida por meio de uma sequência de de soluções aproximadas, geradas pelo processo iterativo dado por\n",
+    "O Método das aproximações sucessivas, ou método do ponto fixo, consiste em reescrever a equação $f(x)=0 $ em uma equação equivalente $x = \\phi (x)$ em que $\\phi (x)$ é a chamada função de iteração. A raiz $\\overline{x}$ procurada é obtida por meio de uma sequência de de soluções aproximadas, geradas pelo processo iterativo dado por\n",
     "\n",
     "$$ x_{i+1} = \\phi(x_i) , \\,\\,\\,\\,\\, i = 0,1,2,...$$\n",
     "\n",
-    "Existem muitas formas diferentes de se obter a função de iteração, como é mostrado nos exempols a seguir.\n",
+    "Existem muitas formas diferentes de se obter a função de iteração, como é mostrado nos exemplos a seguir.\n",
     "\n",
     "### Exemplo 1\n",
     "Seja a equação $f(x) = x^2-7x=0$, então, algumas possíveis funções de iteração são\n",
@@ -30,7 +30,9 @@
     "- $ x_{i+1} = \\phi(x_i) = \\sqrt[3]{x+5}$\n",
     "- $ x_{i+1} = \\phi(x_i) = 5/(x^2-1) $\n",
     "\n",
-    "De modo geral, sempre é possível obter uma função de iteração multiplicando uma função qualquer $\\theta(x)$ pela equação $f(x)=0$ e somando $x$ a ambos os lados obtendo-se $x_{i+1} = \\phi(x_i) = f(x)\\theta(x_i)+x$.\n",
+    "De modo geral, sempre é possível obter uma função de iteração multiplicando uma função qualquer $\\theta(x)$ pela equação $f(x)=0$ e somando $x$ a ambos os lados obtendo-se \n",
+    "\n",
+    "$$x_{i+1} = \\phi(x_i) = f(x)\\theta(x_i)+x$$\n",
     "\n",
     "O processo iterativo gera uma sequência de soluções aproximadas a partir de uma solução inicial (\"chute\" inicial) $x_0$, como é mostrado abaixo\n",
     "\n",
@@ -51,7 +53,7 @@
     "\\noindent {\\bf Convergência}\\\\\n",
     "Seja $\\phi(x)$ uma função contínua e derivável em $I=[a,b]$ centrado em $\\overline{x}$, então, se $|\\phi'(x)|<1$ em $I$, a sequência ${x_k}$, $k=0,1,2,3,..$ querada por $x_{k+1}=\\phi(x_k)$ converge para a raiz $\\overline{x}$ procurada.\n",
     "\n",
-    "No caso do processo iterativo gerar sequências divergentes, uma interpretação geométrica é mostrada na fig. \\ref{divergentes}. \n",
+    "No caso do processo iterativo gerar sequências divergentes, uma interpretação geométrica é mostrada na figura a seguir. \n",
     "\n",
     "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/3.4_ponto_fixo_divergente.PNG\" width=\"500\">\n"
    ]
@@ -67,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -95,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -175,7 +181,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -213,7 +221,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -243,7 +253,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -266,7 +278,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -280,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -320,7 +336,9 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -369,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
