--- a/3_ZEROS_DE_FUNCOES/3.1_Introducao_e_conceitos_basicos .ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.1_Introducao_e_conceitos_basicos .ipynb
@@ -34,6 +34,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encontrando raízes de funções com Scipy\n",
+    "\n",
+    "#### Exemplo 1\n",
+    "Encontrando a raiz de $A_S=\\frac{1}{2}r^2(\\theta-sen\\theta)$ com $r=1$ e $A_s = 3.5$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 7.99067236]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.optimize import fsolve\n",
+    "import math\n",
+    "#scipy.optimize.root_scalar(f, args=(), method=None, bracket=None, \n",
+    "#                           fprime=None, fprime2=None, x0=None, x1=None, \n",
+    "#                           xtol=None, rtol=None, maxiter=None, options=None)[source]\n",
+    "\n",
+    "sol = fsolve(lambda x: 0.5*(x-math.sin(x))-3.5, 1.0)\n",
+    "\n",
+    "print (sol)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -59,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
