--- a/1_INTRODUCAO_ERROS/1.3_erros_absolutos_e_relativos.ipynb
+++ b/1_INTRODUCAO_ERROS/1.3_erros_absolutos_e_relativos.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "Quando obtemos uma aproximação numérica por meio de uma sequência convergete $x_0, x_1, x_2,...,x_k,...$mas não conhecemos a solução exata, o erro relativo no termo $k$ pode ser expresso como _diferença relativa_, dada por  \n",
     "\n",
-    "$$\\left( \\frac{\\left|x_{k-1}-x_k \\right|}{x_k} \\right)$$\n",
+    "$$ \\frac{\\left|x_{k-1}-x_k \\right|}{\\left| x_k \\right|} $$\n",
     "\n"
    ]
   },
@@ -79,8 +79,6 @@
     "x = 1.\n",
     "x_ant = x\n",
     "x_exa = (1+math.sqrt(5))/2\n",
-    "\n",
-    "\n",
     "\n",
     "for k in range(20):\n",
     "    x = 1.+1./x\n",
