--- a/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
+++ b/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
@@ -185,20 +185,78 @@
     "$$ x_1 = b_1/a_{11}$$\n",
     "para $i=2,3...,n$, faça\n",
     "$$ x_i = \\frac{b_i- \\sum\\limits_{j=1}^{(i-1)} a_{ij}x_j}{a_{ii}}$$\t         \n",
-    "\t         \n",
-    "Usando Python, um código que implementa esse algoritmo em uma função, é mostrada abaixo:"
+    "\t         \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exemplo 3\n",
+    "Usando apenas funções do Python, um código que implementa esse algoritmo em uma função é mostrada abaixo:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 84,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "#funcao para resolver um sistema triangula inferior L\n",
     "def solve_L(L, b):\n",
+    "    x = np.copy(b)\n",
+    "    for i in range(len(b)):\n",
+    "        x[i] = (b[i]-np.sum(L[i,0:i]))/L[i,i]             \n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solução: [ 1 -1 -2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exemplo de uso chamando a funcao \n",
+    "A = np.array([[2,0,0],\n",
+    "              [1,4,0],\n",
+    "              [1,1,1]])\n",
+    "\n",
+    "B = np.array([2, -3, 0])\n",
+    "\n",
+    "x = solve_L(A,B)\n",
+    "\n",
+    "print (\"solução:\", x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exemplo 4\n",
+    "Agora usando funções do numpy "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#funcao para resolver um sistema triangula inferior L usando Numpy\n",
+    "import numpy as np\n",
+    "\n",
+    "def solve_L(L, b):\n",
+    "    \n",
     "    x1 = b[0]/L[0][0]\n",
     "    x = [x1]\n",
     "    for i in range(1,len(L)):\n",
@@ -310,6 +368,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exemplo 1\n",
+    "Exemplo de programa como função para fatorar uma matriz A em uma matriz triangular inferior L e uma matriz triangular superior U pelo processo Redução de Doolittle (Nesse exemplo são usadas apenas as funções da biblioteca padrão do Python, sem usar o módulos numéricos Numpy)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -347,6 +413,81 @@
     "            L[i][m] = (A[i][m]-soma)/U[m][m]\n",
     "\n",
     "    return L,U"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exemplo 2\n",
+    "Neste exeplo também é apresentada uma função para fatorar uma matriz A em uma matriz triangular inferior L e uma matriz triangular superior U pelo processo Redução de Doolittle, mas agora são usadas funções do módulos numéricos Numpy para relizar as operações de modo vetorial."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz L:\n",
+      "[[1.  0.  0. ]\n",
+      " [0.  1.  0. ]\n",
+      " [0.5 0.  1. ]]\n",
+      "Matriz U\n",
+      "[[2. 0. 1.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# usando numpy e vetorização das operacoes\n",
+    "import numpy as np\n",
+    "\n",
+    "def fatoracao_LU(A):\n",
+    "    n = len(A)     \n",
+    "    U = np.zeros((n,n))\n",
+    "    L = np.identity(n)\n",
+    "   \n",
+    "    for m in range(n):\n",
+    "        for j in range(n):\n",
+    "            U[m,j] = A[m,j] - np.sum(L[m,0:m] * U[0:m,j])\n",
+    "        for i in range(m+1,n):\n",
+    "            L[i,m] = (A[i,m] - np.sum(L[i,0:m] * U[0:m,m]))/U[m,m]\n",
+    "        return L,U\n",
+    "\n",
+    "A = np.array([[2,0,1],[0,2,1],[1,1,3]])\n",
+    "L,U = fatoracao_LU(A)\n",
+    "\n",
+    "print (\"Matriz L:\")\n",
+    "print (L)\n",
+    "print (\"Matriz U:\")\n",
+    "print(U)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0.]\n",
+      " [0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "U = np.zeros((3,3))\n",
+    "L = np.identity(3)\n",
+    "#print (U)\n",
+    "#print (L)\n",
+    "print(L[0:2,0:2])\n"
    ]
   },
   {
@@ -655,7 +796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
