--- a/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
+++ b/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
@@ -89,6 +89,7 @@
     "\t         1/3    & 1      & 0 \\\\\n",
     "\t         4/3    & 1      & 1 \\\\\n",
     "\t         \\end{array} \\right]$$ \n",
+    "             \n",
     "Por fim, escrevendo $L = M_1^{-1}M_2^{-1}$ e $U=A''$, temos a decomposição da matriz $A$ no produto de uma matriz triangular inferior $L$ por uma matriz triangular superior $U$."
    ]
   },
@@ -198,30 +199,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 90,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#funcao para resolver um sistema triangula inferior L\n",
+    "#funcao para resolver um sistema triangula inferior L usando Numpy\n",
+    "import numpy as np\n",
+    "\n",
     "def solve_L(L, b):\n",
-    "    x = np.copy(b)\n",
-    "    for i in range(len(b)):\n",
-    "        x[i] = (b[i]-np.sum(L[i,0:i]))/L[i,i]             \n",
+    "    \n",
+    "    x1 = b[0]/L[0][0]\n",
+    "    x = [x1]\n",
+    "    for i in range(1,len(L)):\n",
+    "        soma = 0\n",
+    "        for j in range(0,i):\n",
+    "            soma +=  L[i][j]*x[j]\n",
+    "        x.append((b[i]-soma)/L[i][i])\n",
     "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "solução: [ 1 -1 -2]\n"
+      "solução: [1.0, -1.0, 0.0]\n"
      ]
     }
    ],
@@ -248,23 +254,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 102,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "#funcao para resolver um sistema triangula inferior L usando Numpy\n",
-    "import numpy as np\n",
-    "\n",
+    "#funcao para resolver um sistema triangula inferior L\n",
     "def solve_L(L, b):\n",
-    "    \n",
-    "    x1 = b[0]/L[0][0]\n",
-    "    x = [x1]\n",
-    "    for i in range(1,len(L)):\n",
-    "        soma = 0\n",
-    "        for j in range(0,i):\n",
-    "            soma +=  L[i][j]*x[j]\n",
-    "        x.append((b[i]-soma)/L[i][i])\n",
+    "    x = np.copy(b)\n",
+    "    for i in range(len(b)):\n",
+    "        x[i] = (b[i]-np.sum(L[i,0:i]*x[0:i]))/L[i,i]             \n",
     "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solução: [ 1 -1  0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exemplo de uso chamando a funcao \n",
+    "A = np.array([[2,0,0],\n",
+    "              [1,4,0],\n",
+    "              [1,1,1]])\n",
+    "\n",
+    "B = np.array([2, -3, 0])\n",
+    "\n",
+    "x = solve_L(A,B)\n",
+    "\n",
+    "print (\"solução:\", x)"
    ]
   },
   {
