--- a/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
+++ b/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
@@ -82,14 +82,12 @@
     "\t         1      & 0      & 0 \\\\ \n",
     "\t         m_{21} & 1      & 0 \\\\\n",
     "\t         m_{31} & m_{32} & 1 \\\\\n",
-    "\t         \\end{array} \\right]\n",
-    "\t         =\n",
-    "         \\left[\\begin{array}{ccc} \n",
+    "\t         \\end{array} \\right]$$  $$=\n",
+    "             \\left[\\begin{array}{ccc} \n",
     "\t         1      & 0      & 0 \\\\ \n",
     "\t         1/3    & 1      & 0 \\\\\n",
     "\t         4/3    & 1      & 1 \\\\\n",
-    "\t         \\end{array} \\right]$$ \n",
-    "             \n",
+    "\t         \\end{array} \\right]$$             \n",
     "Por fim, escrevendo $L = M_1^{-1}M_2^{-1}$ e $U=A''$, temos a decomposição da matriz $A$ no produto de uma matriz triangular inferior $L$ por uma matriz triangular superior $U$."
    ]
   },
