--- a/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
+++ b/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
@@ -108,9 +108,8 @@
     "\t         3 & 2 & 4 \\\\ \n",
     "\t         1 & 1 & 2 \\\\\n",
     "\t         4 & 3 & 2 \\\\\n",
-    "\t         \\end{array} \\right]\n",
-    "= \n",
-    "  \\left[\\begin{array}{ccc} \n",
+    "\t         \\end{array} \\right]=\n",
+    "             \\left[\\begin{array}{ccc} \n",
     "\t         3 & 2   & 4 \\\\ \n",
     "\t         0 & 1/3 & 2/3 \\\\\n",
     "\t         0 & 0   & -4 \\\\\n",
