--- a/7_INTEGRACAO_NUMERICA/7.4_regras_de_simpson.ipynb
+++ b/7_INTEGRACAO_NUMERICA/7.4_regras_de_simpson.ipynb
@@ -33,7 +33,8 @@
     "\n",
     "\n",
     "Graficamente, tem-se\n",
-    "![Simpson13.jpg](https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/Simpson13.jpg)\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/Simpson13.jpg\" width=\"480\">\n",
+    "\n",
     "\n",
     "### Erro na regra 1/3 de Simpson\n",
     "\n",
@@ -59,9 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -106,8 +105,8 @@
     "$$ = \\frac{h}{3} \\{f(x_0)+ 4[f(x_1) + f(x_3)+...+f(x_{n-1})]+ 2[f(x_2) + f(x_4)+...+f(x_{n-2})] + f(x_n)\\}  $$\n",
     "\n",
     "Graficamente, tem-se\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/Simpson13gen.jpg\" width=\"640\">\n",
     "\n",
-    "![Simpson13gen.jpg](https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/Simpson13gen.jpg)\n",
     "\n",
     "### Erro na regra 1/3 de Simpson generalizada\n",
     "O erro na regra 1/3 de Simpson generalizada será dado por\n",
@@ -134,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -222,9 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -269,7 +264,7 @@
     "\n",
     "$$ = \\frac{3}{8}h \\left\\{ f(x_0) +\n",
     "3 \\left[f(x_1)+f(x_2)+f(x_4)+f(x_5)+....+ f(x_{n-2})+f(x_{n-1})\\right] +\n",
-    "2 \\left[f(x_3)+f(x_6)+....+f(x_{n-3}) \\right] \\right\\}$$\n",
+    "2 \\left[f(x_3)+f(x_6)+....+f(x_{n-3}) \\right] + f(x_n)\\right\\}$$\n",
     "\n",
     "conhecida como **Regra 3/8 de Simpson Generalizada**.\n",
     "\n",
@@ -299,9 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -355,9 +348,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
