corrigindo exemplo 2 de 2.2

--- a/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
+++ b/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
@@ -398,10 +398,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#funcao fatorar uma matriz A em um produto LU\n",
@@ -437,11 +435,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz L:\n",
+      "[[1, 0, 0], [0.0, 1, 0], [0.5, 0.5, 1]]\n",
+      "Matriz U:\n",
+      "[[2, 0, 1], [0, 2.0, 1.0], [0, 0, 2.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[2,0,1],[0,2,1],[1,1,3]])\n",
+    "L,U = factor_LU(A)\n",
+    "\n",
+    "print (\"Matriz L:\")\n",
+    "print (L)\n",
+    "print (\"Matriz U:\")\n",
+    "print(U)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Exemplo 2\n",
-    "Neste exeplo também é apresentada uma função para fatorar uma matriz A em uma matriz triangular inferior L e uma matriz triangular superior U pelo processo Redução de Doolittle, mas agora são usadas funções do módulos numéricos Numpy para relizar as operações de modo vetorial."
+    "Neste exemplo também é apresentada uma função para fatorar uma matriz A em uma matriz triangular inferior L e uma matriz triangular superior U pelo processo Redução de Doolittle, mas agora são usadas funções do módulos numéricos Numpy para relizar as operações de modo vetorial."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# usando numpy e vetorização das operacoes\n",
+    "import numpy as np\n",
+    "\n",
+    "def fatoracao_LU(A):\n",
+    "    n = len(A)     \n",
+    "    U = np.zeros((n,n))\n",
+    "    L = np.identity(n)\n",
+    "    for m in range(n):\n",
+    "        for j in range(m, n):\n",
+    "            U[m,j] = A[m,j] - np.sum(L[m,0:m] * U[0:m,j])\n",
+    "        for i in range(m+1, n):\n",
+    "            L[i,m] = (A[i,m] - np.sum(L[i,0:m] * U[0:m,m]))/U[m,m]\n",
+    "    return L,U"
    ]
   },
   {
@@ -456,59 +501,22 @@
       "Matriz L:\n",
       "[[1.  0.  0. ]\n",
       " [0.  1.  0. ]\n",
-      " [0.5 0.  1. ]]\n",
-      "Matriz U\n",
+      " [0.5 0.5 1. ]]\n",
+      "Matriz U:\n",
       "[[2. 0. 1.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n"
+      " [0. 2. 1.]\n",
+      " [0. 0. 2.]]\n"
      ]
     }
    ],
    "source": [
-    "# usando numpy e vetorização das operacoes\n",
-    "import numpy as np\n",
-    "\n",
-    "def fatoracao_LU(A):\n",
-    "    n = len(A)     \n",
-    "    U = np.zeros((n,n))\n",
-    "    L = np.identity(n)\n",
-    "   \n",
-    "    for m in range(n):\n",
-    "        for j in range(n):\n",
-    "            U[m,j] = A[m,j] - np.sum(L[m,0:m] * U[0:m,j])\n",
-    "        for i in range(m+1,n):\n",
-    "            L[i,m] = (A[i,m] - np.sum(L[i,0:m] * U[0:m,m]))/U[m,m]\n",
-    "        return L,U\n",
-    "\n",
     "A = np.array([[2,0,1],[0,2,1],[1,1,3]])\n",
     "L,U = fatoracao_LU(A)\n",
     "\n",
     "print (\"Matriz L:\")\n",
-    "print (L)\n",
+    "print (np.array(L))\n",
     "print (\"Matriz U:\")\n",
-    "print(U)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 0.]\n",
-      " [0. 1.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "U = np.zeros((3,3))\n",
-    "L = np.identity(3)\n",
-    "#print (U)\n",
-    "#print (L)\n",
-    "print(L[0:2,0:2])\n"
+    "print(np.array(U))"
    ]
   },
   {
