--- a/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
+++ b/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
@@ -188,12 +188,12 @@
    "metadata": {},
    "source": [
     "## Exemplo 3\n",
-    "Usando apenas funções do Python, um código que implementa esse algoritmo em uma função é mostrada abaixo:"
+    "Usando apenas funções do Python (sem usar funções do Numpy), um código que implementa esse algoritmo mostrado abaixo:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,12 +243,12 @@
    "metadata": {},
    "source": [
     "## Exemplo 4\n",
-    "Agora usando funções do numpy "
+    "Agora usando funções do Numpy "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -392,13 +392,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exemplo 1\n",
+    "## Exemplo 5\n",
     "Exemplo de programa como função para fatorar uma matriz A em uma matriz triangular inferior L e uma matriz triangular superior U pelo processo Redução de Doolittle (Nesse exemplo são usadas apenas as funções da biblioteca padrão do Python, sem usar o módulos numéricos Numpy)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,13 +464,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exemplo 2\n",
+    "## Exemplo 6\n",
     "Neste exemplo também é apresentada uma função para fatorar uma matriz A em uma matriz triangular inferior L e uma matriz triangular superior U pelo processo Redução de Doolittle, mas agora são usadas funções do módulos numéricos Numpy para relizar as operações de modo vetorial."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -584,10 +584,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXEMPLO 3\n",
+    "### EXEMPLO 7\n",
     "**Resolução de sistema linear usando fatoração LU com estratégia de pivoteamento parcial**\n",
     "\n",
     "Considere o sistema linear \n",
@@ -759,6 +766,14 @@
     "\t         \\end{array} \\right]$$\n",
     "             \n",
     "Assim, o produto LU fatora a matrix PA. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exemplo 8\n",
+    "Agora usando as funções do Scipy"
    ]
   },
   {
