--- a/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
+++ b/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
@@ -119,52 +119,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exemplo 1\n",
+    "Um exemplo de algoritmo para resolver sistemas lineares por eliminação de Gauss."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# funcao que triangulariza o sistema\n",
+    "\n",
+    "def tr1angulariza(M):\n",
+    "    for j in range(n-1):\n",
+    "        for i in range(j,n-1):\n",
+    "            m = M[i+1,j]/M[j,j]\n",
+    "            M[i+1] = M[i+1]-m*M[j]\n",
+    "    return (M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "[[  1.    ]\n",
-      " [  1.6667]\n",
-      " [-24.    ]]\n",
-      "[[ 3.      2.      4.    ]\n",
-      " [ 0.      0.3333  0.6667]\n",
-      " [ 0.      0.     -4.    ]]\n",
-      "[array([-3.]), array([-7.]), array([ 6.])]\n"
+      "[[  3.           2.           4.           1.        ]\n",
+      " [  0.           0.33333333   0.66666667   1.66666667]\n",
+      " [  0.           0.          -4.         -24.        ]]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
+    "# chamando a fucao acima passando a matriz ampliada\n",
     "M = np.array([[3.,2.,4.,1.],\n",
     "              [1.,1.,2.,2.],\n",
     "              [-4.,3.,2.,3.]])\n",
-    "\n",
-    "# Pega o numero de linhas de M\n",
     "n = len(M)\n",
-    "print (n)\n",
     "\n",
-    "for j in range(n-1):\n",
-    "    for i in range(j,n-1):\n",
-    "        m = M[i+1,j]/M[j,j]\n",
-    "        M[i+1] = M[i+1]-m*M[j]\n",
-    "\n",
-    "        \n",
+    "M = triangulariza(M)\n",
+    "print (M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1.    ]\n",
+      " [  1.6667]\n",
+      " [-24.    ]]\n",
+      "[[ 3.      2.      4.    ]\n",
+      " [ 0.      0.3333  0.6667]\n",
+      " [ 0.      0.     -4.    ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# separa a matriz ampliada em duas\n",
     "b = M[0:n+1,n:n+1]       \n",
     "A = M[0:n+1,0:n]  \n",
     "\n",
     "print (np.round(b,4))\n",
-    "print (np.round(A,4))\n",
-    "\n",
+    "print (np.round(A,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3.0000000000000004, -7.000000000000001, 6.000000000000001]\n"
+     ]
+    }
+   ],
+   "source": [
     "#funcao para resolver um sistema triangular superior\n",
-    "def solve(U, y):\n",
+    "def solve_U(U, y):\n",
     "    n = len(U)-1       #os indices correm de 0 ate n-1\n",
     "    xn = y[n]/U[n][n]\n",
     "\n",
@@ -179,31 +226,22 @@
     "        x[i] = xi\n",
     "    return x\n",
     "\n",
-    "print (solve(A,b))\n"
+    "print (solve_U(A,b))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Outro algoritmo"
+    "## Exemplo 2\n",
+    "Um outro algoritmo para a eliminação de Gauss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-3. -7.  6.]\n"
-     ]
-    }
-   ],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from numpy import dot\n",
@@ -217,22 +255,43 @@
     "                b[i] = b[i] - lam*b[k] \n",
     "    for k in range(n-1,-1,-1): \n",
     "        b[k] = (b[k] - dot(a[k][k+1:n],b[k+1:n]))/a[k][k] \n",
-    "    return b\n",
-    "\n",
-    "A = np.array([[3.,2.,4.,1.],\n",
-    "     [1.,1.,2.,2.],\n",
-    "     [-4.,3.,2.,3.]])\n",
+    "    return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3. -7.  6.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[3.,2.,4.],\n",
+    "     [1.,1.,2.],\n",
+    "     [-4.,3.,2.]])\n",
     "b = np.array([1., 2., 3.])\n",
     "\n",
     "print (gaussElimin(A,b))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exemplo 3\n",
+    "Novamente um algoritmo para a eliminação de Gauss, mas agora usando mais as operações vetoriais do módulo Numpy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -240,16 +299,16 @@
      "text": [
       "[[ 3.      2.      4.    ]\n",
       " [ 0.      0.3333  0.6667]\n",
-      " [ 0.      0.     -4.    ]] [  1.00000000e+00   1.66666667e+00  -4.44089210e-16]\n"
+      " [ 0.      0.     -4.    ]] [  1.           1.66666667 -24.        ]\n"
      ]
     }
    ],
    "source": [
+    "# Contém erro!!!\n",
     "import numpy as np\n",
-    "A = np.array([[ 3.,2.,4.],\n",
-    "              [ 1.,1.,2.],\n",
-    "              [4.,3.,2.]])\n",
-    "\n",
+    "A = np.array([[3.,2.,4.],\n",
+    "              [1.,1.,2.],\n",
+    "              [-4.,3.,2.]])\n",
     "b = np.array([1., 2., 3.])\n",
     "\n",
     "n = len(b)\n",
@@ -257,8 +316,8 @@
     "\n",
     "for j in range(0,n):\n",
     "    for i in range(j+1,n):\n",
-    "        mij = A[i][j]/A[j][j]\n",
-    "        A[i][j:n] = A[i][j:n] - mij*A[j][j:n]\n",
+    "        mij = A[i,j]/A[j,j]\n",
+    "        A[i] = A[i] - mij*A[j]\n",
     "        b[i] = b[i] - mij*b[j] \n",
     "print (np.round(A,4), b)\n",
     "              \n"
@@ -266,12 +325,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'solve_U' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-35-88f1a169407b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msolve_U\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'solve_U' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "solve_U(A,b)"
+   ]
   },
   {
    "cell_type": "code",
@@ -299,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
