--- a/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
+++ b/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
@@ -97,18 +97,20 @@
     "## Exemplo 2\n",
     "\n",
     "Considere o sistema linear \n",
+    "\n",
     "$$ \\begin{cases} \n",
     "\t         3x_1 + 2x_2 + 4x_3 = 1\\\\ \n",
     "\t         x_1  + x_2  + 2x_3 = 2\\\\\n",
     "\t         4x_1 + 3x_2 + 2x_3 = 3\n",
     "\t         \\end{cases} $$\n",
+    "             \n",
     "Sabemos, do exemplo anterior que a matriz dos coeficientes $A$ pode ser decomposta em um produto de matrizes triangular inferior $L$ e superior $U$, como segue\n",
+    "\n",
     "$$\\left[\\begin{array}{ccc} \n",
     "\t         3 & 2 & 4 \\\\ \n",
     "\t         1 & 1 & 2 \\\\\n",
     "\t         4 & 3 & 2 \\\\\n",
-    "\t         \\end{array} \\right]=$$\n",
-    "             $$\\left[\\begin{array}{ccc} \n",
+    "\t         \\end{array} \\right]=\\left[\\begin{array}{ccc} \n",
     "\t         3 & 2   & 4 \\\\ \n",
     "\t         0 & 1/3 & 2/3 \\\\\n",
     "\t         0 & 0   & -4 \\\\\n",
@@ -118,7 +120,9 @@
     "\t         1/3    & 1      & 0 \\\\\n",
     "\t         4/3    & 1      & 1 \\\\\n",
     "\t         \\end{array} \\right]$$\n",
+    "             \n",
     "Fazendo $Ux=y$ e resolvendo o sistema triangular $Ly=b$ para $y$, obtemos \n",
+    "\n",
     "$$\\left[\\begin{array}{ccc} \n",
     "\t         1      & 0      & 0 \\\\ \n",
     "\t         1/3    & 1      & 0 \\\\\n",
@@ -128,13 +132,11 @@
     "\t         y_1 \\\\ \n",
     "\t         y_2 \\\\\n",
     "\t         y_3 \\\\\n",
-    "\t         \\end{array} \\right]=$$\n",
-    "$$\\left[\\begin{array}{c} \n",
+    "\t         \\end{array} \\right]=\\left[\\begin{array}{c} \n",
     "\t         1 \\\\ \n",
     "\t         2 \\\\\n",
     "\t         3 \\\\\n",
-    "\t         \\end{array} \\right] \n",
-    "$$\n",
+    "\t         \\end{array} \\right]$$\n",
     "\n",
     "que fornece $y_1 = 1$, $y_2 = \\frac{5}{3}$ e $y_3=0$. \n",
     "\n",
@@ -149,12 +151,12 @@
     "\t         x_1 \\\\ \n",
     "\t         x_2 \\\\\n",
     "\t         x_3 \\\\\n",
-    "\t         \\end{array} \\right]=$$\n",
-    "$$\\left[\\begin{array}{c} \n",
+    "\t         \\end{array} \\right]=\\left[\\begin{array}{c} \n",
     "\t         1 \\\\ \n",
     "\t         5/3 \\\\\n",
     "\t         0 \\\\\n",
     "\t         \\end{array} \\right]$$\n",
+    "             \n",
     "cuja solução é $x_1 = -3$, $x_2 = 5$ e $x_3=0$, ou \n",
     "$$x = (-3, 5, 0)^T$$ "
    ]
