--- a/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
+++ b/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "A decomposição $LU$ consiste no processo de fatorar uma matriz quadrada $A$ em um produto de duas matrizes triangulares: uma matriz triangular superior $U$ e uma matriz triangular inferior $L$. \n",
     "\n",
-    "É especialmente útil em problemas que envolvem a resolução de múltiplos sistemas lineares do tipo $Ax=b$ em que a matriz dos coeficientes $A = (a_{ij})_{n \\times n}$ permanece inalterada e o vetor de termos independentes $b = (b_1, b_2,...,b_n)^T$ muda. Assim, em muitos casos, podemos escrever $A=LU$, em que \n",
+    "É especialmente útil em problemas que envolvem a resolução de múltiplos sistemas lineares do tipo $Ax=b$ em que a matriz dos coeficientes $A = (a_{ij})_{n \\times n}$ permanece inalterada e o vetor de termos independentes $b = (b_1, b_2,...,b_n)^T$ muda. \n",
+    "\n",
+    "Assim, em muitos casos é útil escrever $A=LU$, em que \n",
     "\n",
     "\n",
     "$ L = \\left[\\begin{array}{cccc} \n",
@@ -31,9 +33,13 @@
     "Utilizando a decomplosição $LU$, para resolver um novo sistema, que possui a mesma matriz $A$ mas um vetor $b$, diferente, basta resolver dois sistemas triangulares o que, em geral, demanda menor esforço computacional. \n",
     "\n",
     "Então, para a resolução do sistema $Ax=b$, em que $A=LU$, fazemos \n",
+    "\n",
     "$$Ax=b$$\n",
+    "\n",
     "$$(LU)x=b$$\n",
+    "\n",
     "$$L(Ux)=b$$\n",
+    "\n",
     "fazemos $Ux=y$ e resolvemos o sistema triangular $Ly=b$, obtendo a solução $y = (y_1,...,y_n)^T$. Em seguida resolvemos o sistema triangular $Ux=y$, obtendo a solução procurada $x = (x_1,...,x_n)^T$, do sistema $Ax=b$."
    ]
   },
@@ -88,6 +94,15 @@
     "\t         4/3    & 1      & 1 \\\\\n",
     "\t         \\end{array} \\right]$$             \n",
     "Por fim, escrevendo $L = M_1^{-1}M_2^{-1}$ e $U=A''$, temos a decomposição da matriz $A$ no produto de uma matriz triangular inferior $L$ por uma matriz triangular superior $U$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Teorema\n",
+    "Seja $A = (a_{ij})$ com $i,j = 1,2,...,n$. Se os menores principais $\\Delta_i$, $i = 1,2,...,n$  de $A$ forem todos diferentes de zero, ou seja, se $\\Delta_i \\neq 0$ em que $\\Delta_i = det(A_i)$ onde $A_i$,  $i = 1,2,...,n$, são matrizes formadas pelas $i$ primeiras linhas e $i$ primeiras colunas de $A$. Então, $A$ se decompõe de maneira única em em um produto de uma matriz triangular inferior $L = (l_{ij})$, $i,j = 1,2,...,n$, com $l_{ii} = 1$, por uma matriz triangular superior $U=(u_{ij})$,$i,j = 1,2,...,n$, ou seja, $A = LU$. Além disso, $det(A) = det(U)$.\n",
+    "\n"
    ]
   },
   {
@@ -217,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -270,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -320,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -352,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -406,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -446,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -482,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -505,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -515,13 +530,13 @@
      "output_type": "stream",
      "text": [
       "Matriz L:\n",
-      "[[1.  0.  0. ]\n",
-      " [0.  1.  0. ]\n",
-      " [0.5 0.5 1. ]]\n",
+      "[[ 1.   0.   0. ]\n",
+      " [ 0.   1.   0. ]\n",
+      " [ 0.5  0.5  1. ]]\n",
       "Matriz U:\n",
-      "[[2. 0. 1.]\n",
-      " [0. 2. 1.]\n",
-      " [0. 0. 2.]]\n"
+      "[[ 2.  0.  1.]\n",
+      " [ 0.  2.  1.]\n",
+      " [ 0.  0.  2.]]\n"
      ]
     }
    ],
@@ -568,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -798,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -807,9 +822,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P = [[0. 1. 0.]\n",
-      " [0. 0. 1.]\n",
-      " [1. 0. 0.]]\n",
+      "P = [[ 0.  1.  0.]\n",
+      " [ 0.  0.  1.]\n",
+      " [ 1.  0.  0.]]\n",
       "L = [[ 1.    0.    0.  ]\n",
       " [ 0.75  1.    0.  ]\n",
       " [ 0.25 -0.5   1.  ]]\n",
@@ -824,11 +839,11 @@
    ],
    "source": [
     "#Fatoração LU usando scipy\n",
-    "from scipy import linalg\n",
+    "from scipy import linalg, array\n",
     "import numpy as np\n",
-    "A = scipy.array([[3.,-4.,1.],[1.,2.,2.],[4.,0.,-3.]])\n",
-    "b = scipy.array([9.,3.,2.])\n",
-    "P, L, U = scipy.linalg.lu(A)\n",
+    "A = array([[3.,-4.,1.],[1.,2.,2.],[4.,0.,-3.]])\n",
+    "b = array([9.,3.,2.])\n",
+    "P, L, U = linalg.lu(A)\n",
     "print (\"P =\", P)\n",
     "print (\"L =\", L)\n",
     "print (\"U =\", U)\n",
