--- a/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
+++ b/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
@@ -242,12 +242,12 @@
    "source": [
     "### Exemplo\n",
     "\n",
-    "Em Python dispomos de algumas funções para acessar as informações do sistema de ponto flutuante:"
+    "Em Python também dispomos de algumas funções para acessar as informações do sistema de ponto flutuante:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
     "\n",
     "$$x^{(1)}=x^{(2)}=x^{(3)}=...=x^{(n)}=\\frac{1}{3}$$\n",
     "\n",
-    "Agora observe o resultado computacional. Explique."
+    "Agora observe o programa abaixo. Você pode explicar os resultados?"
    ]
   },
   {
@@ -533,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
