--- a/3_ZEROS_DE_FUNCOES/3.2_localizacao_de_raizes.ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.2_localizacao_de_raizes.ipynb
@@ -11,11 +11,13 @@
     "\n",
     "$$f(x)=0$$ \n",
     "\n",
-    "Em alguns casos a solução exata $\\overline{x}$ pode ser encontrada por processos analíticos, quando isso não for possível, uma solução aproximada pode ser obtida por métodos numéricos. \n",
+    "Em alguns casos a solução exata $\\overline{x}$ pode ser encontrada por processos analíticos, quando isso não seja possível, uma solução aproximada pode ser obtida por métodos numéricos. Em geral, esses métodos fornecem uma sequência de aproximações, obtidas por um processo iterativo que termina quando a precisão desejada é atingida. \n",
     "\n",
-    "Em geral, métodos numéricos fornecem uma sequência de aproximações obtidas por um processo iterativo que tem seu fim quando a precisão desejada é atingida. Graficamente as raízes da equação $f(x)=0$ (ou zeros da função $f$ correspondem aos pontos onde o gráfico de $f$ intercepta o eixo $x$. Na figura abaixo, a função $f$ possui 5 zeros representados por $\\overline{x}_1$, $\\overline{x}_2$, $\\overline{x}_3$, $\\overline{x}_4$ e $\\overline{x}_5$.\n",
-    "\n",
+    "Graficamente as raízes da equação $f(x)=0$ (ou zeros da função $f$ correspondem aos pontos onde o gráfico de $f$ intercepta o eixo $x$. Na figura abaixo, a função $f$ possui 5 zeros representados por $\\overline{x}_1$, $\\overline{x}_2$, $\\overline{x}_3$, $\\overline{x}_4$ e $\\overline{x}_5$.\n",
+    "<!---\n",
     "![localizacao.png](https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/localizacao.png)\n",
+    "-->\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/localizacao.png\" width=\"350\">\n",
     "\n",
     "\n",
     "Por exemplo, é relativamente fácil obter analiticamente as raízes das equações \n",
@@ -47,8 +49,8 @@
     "\n",
     "A equação $f(x)=e^x-sen(x)-2=0$ pode ser escrita como $e^x=senx+2$ então, esboçando os gráficos de $f_1(x)=e^x$ e $f_2(x)=senx+2$, observamos que \n",
     "a raiz procurada está entre  $0.5$ e $1.5$, como pode ser visto na figura abaixo\n",
-    "![ex1](https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/exemplo1)\n",
     "\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/exemplo1\" width=\"350\">\n",
     "\n",
     "## Exemplo 2\n",
     "Atribuindo valores para $x$ e avaliando a função $f(x)=e^x-sen(x)-2$ para esses valores obtemos:\n",
@@ -158,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
