--- a/3_ZEROS_DE_FUNCOES/3.2_localizacao_de_raizes.ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.2_localizacao_de_raizes.ipynb
@@ -50,7 +50,7 @@
     "A equação $f(x)=e^x-sen(x)-2=0$ pode ser escrita como $e^x=senx+2$ então, esboçando os gráficos de $f_1(x)=e^x$ e $f_2(x)=senx+2$, observamos que \n",
     "a raiz procurada está entre  $0.5$ e $1.5$, como pode ser visto na figura abaixo\n",
     "\n",
-    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/exemplo1\" width=\"350\">\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/exemplo1.png\" width=\"250\">\n",
     "\n",
     "## Exemplo 2\n",
     "Atribuindo valores para $x$ e avaliando a função $f(x)=e^x-sen(x)-2$ para esses valores obtemos:\n",
@@ -74,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
