--- a/3_ZEROS_DE_FUNCOES/3.2_localizacao_de_raizes.ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.2_localizacao_de_raizes.ipynb
@@ -14,10 +14,10 @@
     "Em alguns casos a solução exata $\\overline{x}$ pode ser encontrada por processos analíticos, quando isso não seja possível, uma solução aproximada pode ser obtida por métodos numéricos. Em geral, esses métodos fornecem uma sequência de aproximações, obtidas por um processo iterativo que termina quando a precisão desejada é atingida. \n",
     "\n",
     "Graficamente as raízes da equação $f(x)=0$ (ou zeros da função $f$ correspondem aos pontos onde o gráfico de $f$ intercepta o eixo $x$. Na figura abaixo, a função $f$ possui 5 zeros representados por $\\overline{x}_1$, $\\overline{x}_2$, $\\overline{x}_3$, $\\overline{x}_4$ e $\\overline{x}_5$.\n",
-    "<!---\n",
+    "\n",
     "![localizacao.png](https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/localizacao.png)\n",
-    "-->\n",
-    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/localizacao.png\" width=\"500\">\n",
+    "<!---\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/localizacao.png\" width=\"500\">-->\n",
     "\n",
     "\n",
     "Por exemplo, é relativamente fácil obter analiticamente as raízes das equações \n",
@@ -54,8 +54,8 @@
     "\n",
     "A equação $f(x)=e^x-sen(x)-2=0$ pode ser escrita como $e^x=senx+2$ então, esboçando os gráficos de $f_1(x)=e^x$ e $f_2(x)=senx+2$, observamos que \n",
     "a raiz procurada está entre  $0.5$ e $1.5$, como pode ser visto na figura abaixo\n",
-    "\n",
-    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/exemplo1.png\" width=\"250\">"
+    "![exemplo1](https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/exemplo1.png)\n",
+    "<!-- <img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/exemplo1.png\" width=\"300\"> -->"
    ]
   },
   {
@@ -167,7 +167,8 @@
     "\n",
     "Ainda, considerando essa mesma função, podemos verificar a existência de uma única raíz no intervalo $[1.0, 1.5]$ plotando seu gráfico\n",
     "\n",
-    "![ex2](https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/exemplo2)\n",
+    "\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/exemplo2.png\" width=\"300\">\n",
     "\n",
     "Em Python, podemos plotar os gráficos de $f_1(x)=e^x$ e $f_2(x)=sen(x)+2$ usando o seguinte script:"
    ]
