--- a/3_ZEROS_DE_FUNCOES/3.2_localizacao_de_raizes.ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.2_localizacao_de_raizes.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Graficamente as raízes da equação $f(x)=0$ (ou zeros da função $f$ correspondem aos pontos onde o gráfico de $f$ intercepta o eixo $x$. Na figura abaixo, a função $f$ possui 5 zeros representados por $\\overline{x}_1$, $\\overline{x}_2$, $\\overline{x}_3$, $\\overline{x}_4$ e $\\overline{x}_5$.\n",
     "\n",
-    "![localizacao.png](https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/localizacao.png)\n",
+    "![localizacao.png](images/localizacao.png)\n",
     "<!---\n",
     "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/localizacao.png\" width=\"500\">-->\n",
     "\n",
@@ -54,7 +54,7 @@
     "\n",
     "A equação $f(x)=e^x-sen(x)-2=0$ pode ser escrita como $e^x=senx+2$ então, esboçando os gráficos de $f_1(x)=e^x$ e $f_2(x)=senx+2$, observamos que \n",
     "a raiz procurada está entre  $0.5$ e $1.5$, como pode ser visto na figura abaixo\n",
-    "![exemplo1](https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/exemplo1.png)\n",
+    "![exemplo1](/images/exemplo1.png)\n",
     "<!-- <img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/exemplo1.png\" width=\"300\"> -->"
    ]
   },
