--- a/5_INTERPOLACAO/5.3_formula_de_newton.ipynb
+++ b/5_INTERPOLACAO/5.3_formula_de_newton.ipynb
@@ -238,9 +238,9 @@
     "\n",
     "Supondo que a função inversa de $f (x)$ exista no intervalo de interpolação, a qual denotamos por $f^{-1}(x)$, então para os pontos tabelados $y_i = f(x_i)$, $i = 0,...,n$ temos $x_i =f^{-1}(y_i)$, e o valor desejado $x$ tal que $y=f(x)$ é obtido por $x=f^{-1}(y)$.\n",
     "\n",
-    "Assim, simplesmente trocamos na tabela de dados os valores de $x$ e $f(x)$ e fazemos a interpolação de $f^{−1}(x)$, como visto anteriormente.\n",
+    "Assim, simplesmente trocamos na tabela de dados os valores de $x$ e $f(x)$ e fazemos a interpolação de $f^{-1}(x)$, como visto anteriormente.\n",
     "\n",
-    "Lembramos, ainda, que a função inversa $x = f^{−1}(y)$ existe e é única se $f(x)$ é contínua e monótona crescente ou decrescente no intervalo de interpolação. \n"
+    "Lembramos, ainda, que a função inversa $x = f^{-1}(y)$ existe e é única se $f(x)$ é contínua e monótona crescente ou decrescente no intervalo de interpolação. \n"
    ]
   },
   {
