--- a/2_SISTEMAS_LINEARES/2.4_metodos_por_inversao_de_matrizes.ipynb
+++ b/2_SISTEMAS_LINEARES/2.4_metodos_por_inversao_de_matrizes.ipynb
@@ -26,16 +26,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exemplo\n",
+    "Resolver o sistema $Ax=b$ com $A = \n",
+    " \\left[\\begin{array}{ccc} \n",
+    "\t         3 & 0 & 1 \\\\ \n",
+    "\t         3 & 2 & 1 \\\\\n",
+    "            -3 & 1 & 3 \\\\\n",
+    "\t     \\end{array} \\right]$\n",
+    "e $b = (1,1,3)^t$.    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from numpy.linalg import inv\n",
+    "\n",
+    "A = np.array([[3,0,1],[3,2,1],[-3,1,3]])\n",
+    "b = np.array([1,1,3])\n",
+    "x = np.dot(inv(A),b)\n",
+    "print (np.round(x,4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Obtenção da matriz inversa\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gaussJordan(M):\n",
+    "    n = len(M)\n",
+    "    for k in range(n):\n",
+    "        M[k] = M[k]/M[k,k]\n",
+    "        for i in range(n):\n",
+    "            if i!=k:\n",
+    "                M[i] = M[i] - M[i,k]*M[k]\n",
+    "    return (M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.  1.  3.  1.  0.  0.]\n",
+      " [ 0. -1.  1.  0.  1.  0.]\n",
+      " [ 1.  0.  3.  0.  0.  1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[2,1,3],[0,-1,1],[1,0,3]], float)\n",
+    "I = np.identity(len(A))\n",
+    "M = np.concatenate((A,I), axis=1)\n",
+    "print (M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.   0.   0.   1.5  1.5 -2. ]\n",
+      " [ 0.   1.   0.  -0.5 -1.5  1. ]\n",
+      " [ 0.   0.   1.  -0.5 -0.5  1. ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = gaussJordan(M)\n",
+    "print (M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.5  1.5 -2. ]\n",
+      " [-0.5 -1.5  1. ]\n",
+      " [-0.5 -0.5  1. ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Ainv = M[:,3:6]\n",
+    "print(Ainv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Outra forma de fazer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -51,10 +187,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "A = np.array([[1,0,1],[0,1,2],[0,1,1]])\n",
-    "I = np.identity(3)\n",
     "n = len(A)\n",
     "for j in range(0,n):\n",
     "    for i in range(j+1,n):\n",
@@ -68,10 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -95,16 +232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.  0. -0. -1. -1.  1.]\n"
+      "[1. 0. 0.] [ 0.  1. -1.] [0. 0. 1.]\n",
+      "[[ 1.  0.  0.]\n",
+      " [ 0.  1. -1.]\n",
+      " [ 0.  0.  1.]]\n"
      ]
     }
    ],
@@ -120,9 +258,12 @@
     "c2 = solve_tri(A,b2)\n",
     "c3 = solve_tri(A,b3)\n",
     "\n",
-    "M = np.concatenate((c1, c2))\n",
-    "print(M)\n",
-    "\n"
+    "\n",
+    "print(c1, c2, c3)\n",
+    "\n",
+    "M = np.concatenate((c1, c2, c3))\n",
+    "\n",
+    "print (M.reshape(3,3))"
    ]
   },
   {
@@ -151,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
